2004-09-23 Jean-Pierre Roux
  * FIX In order not to be poluted any longer by casting problems,
    the member VoidArea of gdcmBinEntry is now uint8_t* (instead of void *)
	 we can now delete[] it safely 	
  * VoidArea is now called BinArea (less confusing name),
    and all the methods called ...VoidArea... are now ... BinArea...

2004-09-22 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * src/gdcmDocument.cxx: gdcmDocument::~gdcmDocument() doesn't clear (nor
    clear) TagHT, which is an inherited member of gdcmElementSet. It is
    up to the destructor of gdcmElementSet to clean up TagHt and it's
    pointed content.

2004-09-21 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * Test/CMakeLists.txt: update to follow gdcmData renamings.
  * src/gdcmCommon.h, gdcmDocument.cxx: doxygen typos

2004-09-17 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * ENH: added some utility method that builds a flat dictionnary
    holding all the Dicom entries contained in the recursive structure
    of a gdcmElementSet. Refer to add FlatHashTablePrint.cxx for 
    an example of usage.
    - src/gdcmDocument.[h|cxx] added BuildFlatHashTableRecurse() and
      BuildFlatHashTable() that build a flat dictionary.
    - src/gdcmElementSet.h: added a new private GetTag() accessor.
      gdcmDocument is now a friend of gdcmElementSet.
    - src/gdcmElementSet.cxx: clean up.
    - Example/FlatHashTablePrint.cxx added.
    - Example/CmakeLists.txt changed accordingly

2004-09-16 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * gdcmDocEntrySet::SQDepthLevel and gdcmDocEntrySet::BaseTagKey attributes
    moved away from gdcmDocEntrySet (since this class is an abstract class
    acting like an interface). SQDepthLevel and BaseTagKey are now
    in class 
    - src/gdcmDocEntrySet.[h|cxx] removal of SQDepthLevel and BaseTagKey
      and associated accessors. Doxygenation of the class.
    - src/gdcmSQItem.[h|cxx] SQDepthLevel and BaseTagKey and associated
      accessors added.