@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmDicomDirPatient.cxx,v $
   Language:  C++
-  Date:      $Date: 2004/08/26 15:29:52 $
-  Version:   $Revision: 1.11 $
+  Date:      $Date: 2004/09/23 10:47:10 $
+  Version:   $Revision: 1.12 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -25,21 +25,21 @@
 /**
  * \brief   Constructor
  * @param  s SQ Item holding the elements related to this "PATIENT" part
- * @param ptagHT pointer to the HTable (gdcmObject needs it 
+ * @param ptagHT pointer to the HTable (gdcmDicomDirObject needs it 
  *               to build the gdcmHeaderEntries)
  */
 gdcmDicomDirPatient::gdcmDicomDirPatient(gdcmSQItem *s, TagDocEntryHT *ptagHT):
-   gdcmObject(ptagHT)
+   gdcmDicomDirObject(ptagHT)
 {
    docEntries = s->GetDocEntries();
 }
 /**
  * \brief   Constructor
- * @param ptagHT pointer to the HTable (gdcmObject needs it 
+ * @param ptagHT pointer to the HTable (gdcmDicomDirObject needs it 
  *               to build the gdcmHeaderEntries)
  */
 gdcmDicomDirPatient::gdcmDicomDirPatient(TagDocEntryHT *ptagHT):
-   gdcmObject(ptagHT)
+   gdcmDicomDirObject(ptagHT)
 {
 }
 /**
@@ -63,7 +63,7 @@ gdcmDicomDirPatient::~gdcmDicomDirPatient()
 void gdcmDicomDirPatient::Print(std::ostream &os)
 {
    os << "PATIENT" << std::endl;
-   gdcmObject::Print(os);
+   gdcmDicomDirObject::Print(os);
 
    for(ListDicomDirStudy::iterator cc = studies.begin();
                                    cc != studies.end(); ++cc)
@@ -79,7 +79,7 @@ void gdcmDicomDirPatient::Print(std::ostream &os)
  */ 
 void gdcmDicomDirPatient::Write(FILE *fp, FileType t)
 {
-   gdcmObject::Write(fp, t);
+   gdcmDicomDirObject::Write(fp, t);
 
    for(ListDicomDirStudy::iterator cc = studies.begin();cc!=studies.end();++cc)
    {
